[package]
name = "bb8-tiberius"
version = "0.1.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "bb8 connection manager for Tiberius"
repository = "https://github.com/kardeiz/bb8-tiberius"
keywords = ["mssql", "tiberius", "database", "pool"]

[dependencies]
futures = "0.1"
tiberius = { version = "0.3", default-features = false }
bb8 = "0.3"
futures-state-stream = "0.1"

[dev-dependencies]
tokio = "0.1.22"

[features]
default = ["chrono", "tls", "tiberius/chrono", "tiberius/tls"]
tls = ["tokio-tls", "native-tls", "tiberius/tls"]
chrono = ["tiberius/chrono"]
native-tls = ["tiberius/native-tls"]
tokio-tls = ["tiberius/tokio-tls"]

[patch.crates-io]
tiberius = { git = "https://github.com/kardeiz/tiberius", rev = "0e7069d" }