[package]
name = "bb8-tiberius"
version = "0.4.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "bb8 connection manager for Tiberius"
repository = "https://github.com/kardeiz/bb8-tiberius"
keywords = ["mssql", "tiberius", "database", "pool"]

[dependencies]
futures = "0.3"
tiberius = { version = "0.4", default-features = false }
bb8 = "0.4"
thiserror = "1.0.20"
tokio = { version = "0.2", features = ["net", "io-util", "rt-threaded", "macros"], optional = true }
tokio-util = { version = "0.3", features = ["compat"], optional = true }
async-trait = "0.1.36"
async-std = { version = "1.6", optional = true }

[features]
default = ["chrono", "tls", "tds73", "with-tokio"]
tls = ["tiberius/tls"]
with-tokio = ["tokio", "tokio-util"]
with-async-std = ["async-std"]
tds73 = ["tiberius/tds73"]
chrono = ["tiberius/chrono"]
