[package]
name = "bb8-tiberius"
version = "0.6.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "bb8 connection manager for Tiberius"
repository = "https://github.com/kardeiz/bb8-tiberius"
keywords = ["mssql", "tiberius", "database", "pool"]

[dependencies]
futures = "0.3"
tiberius = { version = "0.6", default-features = false }
bb8 = "0.7.0"
thiserror = "1.0.23"
tokio = { version = "1.1.0", features = ["net", "io-util", "rt-multi-thread", "macros"], optional = true }
tokio-util = { version = "0.6.2", features = ["compat"], optional = true }
async-trait = "0.1.42"
async-std = { version = "1.9.0", optional = true }

[features]
default = ["chrono",  "tds73", "with-tokio"]
tls = ["tiberius/vendored-openssl"]
with-tokio = ["tokio", "tokio-util"]
with-async-std = ["async-std"]
tds73 = ["tiberius/tds73"]
chrono = ["tiberius/chrono"]
